# omnichain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_STANDARDS.md  Dockerfile  GEMINI.md  README.md
backend/: pyproject.toml
backend/src/omnichain/: __init__.py  config.py  errors.py  logging_config.py  main.py
backend/src/omnichain/agents/: parsing.py  prompt_compiler.py  storyboard_agent.py
backend/src/omnichain/api/: characters.py  gcs.py  generation.py  sessions.py
backend/src/omnichain/models/: schemas.py
backend/src/omnichain/prompts/: compiler_system.md  storyboard_system.md
backend/src/omnichain/services/: ffmpeg_service.py  firestore_store.py  gcs_service.py  interactions.py
backend/tests/: fakes.py  test_api_sessions_characters.py  test_app.py  test_config.py  test_edit_assemble_endpoints.py  test_ffmpeg_service.py  test_firestore_store.py  test_gcs.py  test_generation_endpoint.py  test_interactions.py  test_logging_config.py  test_prompt_compiler.py  test_schemas.py  test_spa.py  test_storyboard_agent.py
docs/notes/: README.md  environment.md  interactions-api.md
docs/plans/: 2026-07-23-omnichain.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ErrorToast.tsx  api.ts  index.css  main.tsx  oneChange.ts  types.ts
frontend/src/stages/: DailiesStage.tsx  FinalCutStage.tsx  StoryboardStage.tsx  VisionStage.tsx
scripts/: generate_banner.py  setup_gcp.sh
