[project]
name = "omnichain"
version = "0.1.0"
description = "AI parody & mashup video studio powered by gemini-omni-flash-preview"
readme = "README.md"
authors = [
    { name = "OmniChain Dev", email = "dev@omnichain.local" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "ffmpeg-python>=0.2.0",
    "google-adk>=2.5.0",
    "google-cloud-firestore>=2.28.0",
    "google-cloud-storage>=3.13.0",
    "google-genai>=2.14.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "ty>=0.0.63",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle: not enforcing docstrings project-wide
    "COM812",  # trailing-comma conflicts with formatter
    "ISC001",  # implicit-str-concat conflicts with formatter
    "FBT",     # boolean positional args are fine for this codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "ARG", "EM101", "EM102", "TRY003", "TC002", "TC003"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
